Re-ordered the boundary layers in the layer control to show the hierachy.

--- a/trafford.html
+++ b/trafford.html
@@ -243,7 +243,7 @@
                 labMap.boundaryLA = L.geoJSON(data, { attribution: labMap.attributionOS, style: labMap.poly, onEachFeature: featureEvents }).addTo(labMap.map);
                 labMap.map.fitBounds(labMap.boundaryLA.getBounds()); // adjust the zoom to fit the boundary to the screen size
 
-                labMap.overlayLayers['Authority boundary'] = labMap.boundaryLA;
+                labMap.overlayLayers['1. Authority boundary'] = labMap.boundaryLA;
                 labMap.updateLayerControl();
             });
 
@@ -251,7 +251,7 @@
             labAjax('https://www.trafforddatalab.io/spatial_data/council_defined/trafford_localities.geojson', function (data) {
                 labMap.boundaryLocalities = L.geoJSON(data, { attribution: labMap.attributionOS, style: labMap.poly, onEachFeature: featureEvents });
 
-                labMap.overlayLayers['Council-defined localities'] = labMap.boundaryLocalities;
+                labMap.overlayLayers['Localities (Trafford Council)'] = labMap.boundaryLocalities;
                 labMap.updateLayerControl();
             });
 
@@ -259,7 +259,7 @@
             labAjax('https://www.trafforddatalab.io/spatial_data/ward/2017/trafford_ward_full_resolution.geojson', function (data) {
                 labMap.boundaryWards = L.geoJSON(data, { attribution: labMap.attributionOS, style: labMap.poly, onEachFeature: featureEvents });
 
-                labMap.overlayLayers['Electoral wards'] = labMap.boundaryWards;
+                labMap.overlayLayers['2a. Electoral wards'] = labMap.boundaryWards;
                 labMap.updateLayerControl();
             });
 
@@ -267,7 +267,7 @@
             labAjax('https://www.trafforddatalab.io/spatial_data/msoa/2011/trafford_msoa_full_resolution.geojson', function (data) {
                 labMap.boundaryMSOAs = L.geoJSON(data, { attribution: labMap.attributionOS, style: labMap.poly, onEachFeature: featureEvents });
 
-                labMap.overlayLayers['Middle Layer Super Output Areas (MSOA)'] = labMap.boundaryMSOAs;
+                labMap.overlayLayers['2b. Middle Layer Super Output Areas (MSOA)'] = labMap.boundaryMSOAs;
                 labMap.updateLayerControl();
             });
 
@@ -275,7 +275,7 @@
             labAjax('https://www.trafforddatalab.io/spatial_data/lsoa/2011/trafford_lsoa_full_resolution.geojson', function (data) {
                 labMap.boundaryLSOAs = L.geoJSON(data, { attribution: labMap.attributionOS, style: labMap.poly, onEachFeature: featureEvents });
 
-                labMap.overlayLayers['Lower Layer Super Output Areas (LSOA)'] = labMap.boundaryLSOAs;
+                labMap.overlayLayers['3. Lower Layer Super Output Areas (LSOA)'] = labMap.boundaryLSOAs;
                 labMap.updateLayerControl();
             });
 
@@ -283,7 +283,7 @@
             labAjax('https://www.trafforddatalab.io/spatial_data/oa/2011/trafford_oa_generalised.geojson', function (data) {
                 labMap.boundaryOAs = L.geoJSON(data, { attribution: labMap.attributionOS, style: labMap.poly, onEachFeature: featureEvents });
 
-                labMap.overlayLayers['Output Areas (OA)'] = labMap.boundaryOAs;
+                labMap.overlayLayers['4. Output Areas (OA)'] = labMap.boundaryOAs;
                 labMap.updateLayerControl();
             });
 
