Basic implementation of dataset selection.

--- a/trafford.html
+++ b/trafford.html
@@ -63,65 +63,6 @@
 
 
         <script>
-            // ######### EXTERNAL DATA #########
-            var title = labGetQryStrValByKey('title');
-            var about = labGetQryStrValByKey('about');
-            var dataUrl = labGetQryStrValByKey('data');
-            var attr = labGetQryStrValByKey('attr');
-
-            // defaults
-            if (title === null) title = 'Trafford';
-            if (about === null) about = 'Explore the different geographies within the Local Authority by choosing a layer and then selecting an area.';
-
-            // list of datasets - add new ones to the end
-            var arrDatasets = [
-                { name: 'Air quality', url: 'https://www.trafforddatalab.io/maps/trafford.html?title=Air%20quality&about=Air%20Quality%20Management%20Areas%20(AQMAs)%20in%20Trafford.&attr=Department%20for%20Environment%20Food%20%26%20Rural%20Affairs%20(Defra)&data=https://www.trafforddatalab.io/open_data/aqma/trafford_aqma_styled.geojson' },
-                { name: 'Care homes', url: 'https://www.trafforddatalab.io/maps/trafford.html?title=Care%20homes&about=Nursing%20and%20residential%20care%20homes%20in%20Trafford.&attr=Care%20Quality%20Commission&data=https://www.trafforddatalab.io/open_data/care_homes/trafford_care_homes.geojson' }
-            ];
-
-
-            // ######### INITIALISATION #########
-            var labMap = new LabLeafletMap({
-                title: title,
-                about: about + '<p>To load a dataset on the map, please choose from the following options:<br /><select name="frmDatasetList" onChange="location.href = this.value"></select></p>'
-            });
-
-            //TODO: sort arrDatasets A-Z
-            //TODO: add arrDatasets as options to frmDatasetList
-
-            labMap.baseLayers['Light'].addTo(labMap.map);   // Choose the base/tile layer for the map
-
-            labMap.featureCache = null;    // for caching the feature currently selected
-
-            // Polygon feature styling
-            labMap.poly = {
-                color: '#212121',
-                weight: 2,
-                fillOpacity: 0
-            };
-
-            // Selected polygon styling
-            labMap.polySelected = {
-                color: '#ffea00',
-                weight: 3,
-                fillColor: '#ffff00',
-                fillOpacity: '0.5',
-                opacity: '1'
-            };
-
-            // Point data feature styling
-            labMap.marker = L.AwesomeMarkers.icon({
-                markerColor: 'pin-circle-orange-bright',
-                iconSize: [20, 39]
-            });
-
-            // User-selected point data styling
-            labMap.markerSelected = L.AwesomeMarkers.icon({
-                markerColor: 'pin-circle-yellow-bright',
-                iconSize: [20, 39]
-            });
-
-
             // ######### FUNCTIONS #########
             // To setup each feature within GeoJSON
             function featureEvents (feature, layer) {
@@ -218,8 +159,8 @@
                 }
             }
 
+            // This function is for styling non-point data loaded externally. If it has internal styling use that, otherwise use a default
             function styleOverlayData(feature) {
-                // This funciton is for styling non-point data loaded externally. If it has internal styling use that, otherwise use a default
                 var styles = {
                     color: '#fc6721',
                     fillColor: '#fc6721',
@@ -238,6 +179,92 @@
 
                 return styles;
             }
+
+            // Sorting the dataset array A-Z based on the name of the dataset
+            function sortDatasetsArray(a, b) {
+                var x = a.name.toLowerCase();
+                var y = b.name.toLowerCase();
+                if (x < y) return -1;
+                if (x > y) return 1;
+                return 0;
+            }
+
+
+            // ######### SETUP #########
+            var mainUrl = location.href.toLowerCase();
+            var title = labGetQryStrValByKey('title');
+            var about = labGetQryStrValByKey('about');
+            var dataUrl = labGetQryStrValByKey('data');
+            var attr = labGetQryStrValByKey('attr');
+
+            // defaults
+            if (title === null) title = 'Trafford';
+            if (about === null) about = 'Explore the different geographies within the Local Authority by choosing a layer and then selecting an area.';
+
+            // list of datasets - add new ones to the end
+            var arrDatasets = [
+                { name: 'Care homes', url: 'https://www.trafforddatalab.io/maps/trafford.html?title=Care%20homes&about=Nursing%20and%20residential%20care%20homes%20in%20Trafford.&attr=Care%20Quality%20Commission&data=https://www.trafforddatalab.io/open_data/care_homes/trafford_care_homes.geojson' },
+                { name: 'Air quality', url: 'https://www.trafforddatalab.io/maps/trafford.html?title=Air%20quality&about=Air%20Quality%20Management%20Areas%20(AQMAs)%20in%20Trafford.&attr=Department%20for%20Environment%20Food%20%26%20Rural%20Affairs%20(Defra)&data=https://www.trafforddatalab.io/open_data/aqma/trafford_aqma_styled.geojson' }
+            ];
+
+            // sort the array to ensure A-Z order
+            arrDatasets.sort(function (a, b) {
+                var x = a.name.toLowerCase();
+                var y = b.name.toLowerCase();
+                if (x < y) return -1;
+                if (x > y) return 1;
+                return 0;
+            });
+
+            // create the select element to choose the datasets
+            var datasetSelect = '<select name="frmDatasetList" onChange="location.href = this.value"><option value="" selected="selected">Select a dataset...</option>';
+
+            for (var i = 0; i < arrDatasets.length; i++) {
+                datasetSelect += '<option value="' + arrDatasets[i].url + '"';
+                if (mainUrl == arrDatasets[i].url.toLowerCase()) datasetSelect += ' selected="selected"';
+                datasetSelect += '>' + arrDatasets[i].name + '</option>';
+            }
+
+            datasetSelect += '</select>';
+
+
+            // ######### INITIALISATION #########
+            var labMap = new LabLeafletMap({
+                title: title,
+                about: about + '<p>To load a dataset on the map, please choose from the following options:<br />' + datasetSelect + '</p>'
+            });
+
+            labMap.baseLayers['Light'].addTo(labMap.map);   // Choose the base/tile layer for the map
+
+            labMap.featureCache = null;    // for caching the feature currently selected
+
+            // Polygon feature styling
+            labMap.poly = {
+                color: '#212121',
+                weight: 2,
+                fillOpacity: 0
+            };
+
+            // Selected polygon styling
+            labMap.polySelected = {
+                color: '#ffea00',
+                weight: 3,
+                fillColor: '#ffff00',
+                fillOpacity: '0.5',
+                opacity: '1'
+            };
+
+            // Point data feature styling
+            labMap.marker = L.AwesomeMarkers.icon({
+                markerColor: 'pin-circle-orange-bright',
+                iconSize: [20, 39]
+            });
+
+            // User-selected point data styling
+            labMap.markerSelected = L.AwesomeMarkers.icon({
+                markerColor: 'pin-circle-yellow-bright',
+                iconSize: [20, 39]
+            });
 
 
             // ######### EVENTS #########
